[metadata]
name = construction-site-mielvds
version = 0.0.2
author="Miel Vander Sande"
author_email="miel.vandersande@meemoo.be"
description = A usable and scalable API for RDF construction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viaacode/constructionsite
project_urls =
    Bug Tracker = https://github.com/viaacode/constructionsite/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3


[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .